<resources>
    <string name="app_name">OrderFood</string>
    <string name="logo_image_view">logo image view</string>
    <string name="slogan_text">Customer is all</string>
    <string name="login_button_text">login</string>
    <string name="register_button_text">register</string>
    <string name="hint_phone">phone</string>
    <string name="hint_password">password</string>
    <string name="test_phone_text">0395616595</string>
    <string name="test_password_text">111111</string>
    <string name="user_not_exist">User doesn\'t exits</string>
    <string name="login_failed">Login failed</string>
    <string name="empty_phone">empty phone</string>
    <string name="empty_password">empty password</string>
    <string name="short_password">short password</string>
    <string name="wrong_password">wrong password</string>
    <string name="login_success">login successful</string>
    <string name="error_occur">error occur</string>
    <string name="hint_name">name</string>
    <string name="test_name_text">aaaa</string>
    <string name="empty_name">empty name</string>
    <string name="already_phone">phone already regsiter</string>
    <string name="regsiter_success">regsiter successful</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_main">Menu</string>
    <string name="nav_menu">Menu</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_order">Order</string>
    <string name="nav_logout">Sign out</string>
    <string name="image_view">image view</string>
</resources>
