<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu"
            android:title="@string/nav_menu" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/nav_cart" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_access_time"
            android:title="@string/nav_order" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit"
            android:title="@string/nav_logout" />
    </group>
</menu>
